mobile light mode complete

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,7 +37,68 @@
         />
         <button class="search-btn" type="submit">Search</button>
       </div>
+      <div class="user-card-container">
+        <div class="user-header-container">
+          <img class="user-img" src="assets/me.jpeg" alt="user photo" />
+          <div class="user-name-container">
+            <h2 class="full-name">The Octocat</h2>
+            <h3 class="username">@octocat</h3>
+            <h4 class="joined">Joined 25 Jan 2011</h4>
+          </div>
+        </div>
+        <p class="bio">
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
+          Quisque volutpat mattis eros.
+        </p>
+        <div class="stat-container">
+          <div class="stat-item">
+            <p class="stat-text">Repos</p>
+            <p class="stat-num">8</p>
+          </div>
+          <div class="stat-item">
+            <p class="stat-text">Followers</p>
+            <p class="stat-num">3838</p>
+          </div>
+          <div class="stat-item">
+            <p class="stat-text">Following</p>
+            <p class="stat-num">9</p>
+          </div>
+        </div>
+        <div class="details-container">
+          <div class="detail-item">
+            <img
+              class="detail-icon"
+              src="assets/icon-location.svg"
+              alt="location marker"
+            />
+            <p class="detail-text location">San Francisco</p>
+          </div>
+          <div class="detail-item">
+            <img
+              class="detail-icon"
+              src="assets/icon-website.svg"
+              alt="link icon"
+            />
+            <p class="detail-text">https://github.blog</p>
+          </div>
+          <div class="detail-item">
+            <img
+              class="detail-icon"
+              src="assets/icon-twitter.svg"
+              alt="twitter icon"
+            />
+            <p class="detail-text">Not Available</p>
+          </div>
+          <div class="detail-item">
+            <img
+              class="detail-icon"
+              src="assets/icon-company.svg"
+              alt="building icon"
+            />
+            <p class="detail-text">@github</p>
+          </div>
+        </div>
+      </div>
     </main>
-    Search GitHub username... Search Joined Repos Followers Following
   </body>
 </html>
