finished tablet and desktop light

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,6 +10,12 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link href="styles.css" rel="stylesheet" />
     <script src="script.js" defer></script>
     <title>Frontend Mentor | GitHub user search app</title>
@@ -65,7 +71,7 @@
           </div>
         </div>
         <div class="details-container">
-          <div class="detail-item">
+          <div class="detail-item location-div">
             <img
               class="detail-icon"
               src="assets/icon-location.svg"
@@ -73,7 +79,7 @@
             />
             <p class="detail-text location">San Francisco</p>
           </div>
-          <div class="detail-item">
+          <div class="detail-item website-div">
             <img
               class="detail-icon"
               src="assets/icon-website.svg"
@@ -81,7 +87,7 @@
             />
             <p class="detail-text">https://github.blog</p>
           </div>
-          <div class="detail-item">
+          <div class="detail-item twitter-div">
             <img
               class="detail-icon"
               src="assets/icon-twitter.svg"
@@ -89,7 +95,7 @@
             />
             <p class="detail-text">Not Available</p>
           </div>
-          <div class="detail-item">
+          <div class="detail-item company-div">
             <img
               class="detail-icon"
               src="assets/icon-company.svg"
