--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -46,29 +46,26 @@
       </div>
       <div class="user-card-container">
         <div class="user-header-container">
-          <img class="user-img" src="assets/me.jpeg" alt="user photo" />
+          <img class="user-img" alt="user photo" />
           <div class="user-name-container">
-            <h2 class="full-name">The Octocat</h2>
-            <h3 class="username">@octocat</h3>
-            <h4 class="joined">Joined 25 Jan 2011</h4>
+            <h2 class="full-name"></h2>
+            <h3 class="username"></h3>
+            <h4 class="joined"></h4>
           </div>
         </div>
-        <p class="bio">
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
-          Quisque volutpat mattis eros.
-        </p>
+        <p class="bio"></p>
         <div class="stat-container">
           <div class="stat-item">
             <p class="stat-text">Repos</p>
-            <p class="stat-num repos">8</p>
+            <p class="stat-num repos"></p>
           </div>
           <div class="stat-item">
             <p class="stat-text">Followers</p>
-            <p class="stat-num followers">3838</p>
+            <p class="stat-num followers"></p>
           </div>
           <div class="stat-item">
             <p class="stat-text">Following</p>
-            <p class="stat-num following">9</p>
+            <p class="stat-num following"></p>
           </div>
         </div>
         <div class="details-container">
@@ -79,25 +76,25 @@
               alt="location marker"
               data-detail-category="location"
             />
-            <p class="detail-text location">San Francisco</p>
+            <p class="detail-text location"></p>
           </div>
           <div class="detail-item website-div">
             <img
               class="detail-icon"
-              src="assets/icon-website.svg"
+              src="assets/icon-blog.svg"
               alt="link icon"
-              data-detail-category="website"
+              data-detail-category="blog"
             />
-            <p class="detail-text website">https://github.blog</p>
+            <p class="detail-text blog"></p>
           </div>
           <div class="detail-item twitter-div">
             <img
               class="detail-icon"
-              src="assets/icon-twitter.svg"
+              src="assets/icon-twitter_username.svg"
               alt="twitter icon"
-              data-detail-category="twitter"
+              data-detail-category="twitter_username"
             />
-            <p class="detail-text twitter">Not Available</p>
+            <p class="detail-text twitter_username"></p>
           </div>
           <div class="detail-item company-div">
             <img
@@ -106,7 +103,7 @@
               alt="building icon"
               data-detail-category="company"
             />
-            <p class="detail-text company">@github</p>
+            <p class="detail-text company"></p>
           </div>
         </div>
       </div>
