working on dark mode

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <main>
-      <div class="search-container">
+      <form method="GET" class="search-container">
         <img
           class="search-icon"
           src="assets/icon-search.svg"
@@ -43,7 +43,7 @@
         />
         <p class="error">No results</p>
         <button class="search-btn" type="submit">Search</button>
-      </div>
+      </form>
       <div class="user-card-container">
         <div class="user-header-container">
           <img class="user-img" alt="user photo" />
