--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -85,7 +85,7 @@
               alt="link icon"
               data-detail-category="blog"
             />
-            <p class="detail-text blog"></p>
+            <a class="detail-text blog"></a>
           </div>
           <div class="detail-item twitter-div">
             <img
@@ -94,7 +94,7 @@
               alt="twitter icon"
               data-detail-category="twitter_username"
             />
-            <p class="detail-text twitter_username"></p>
+            <a class="detail-text twitter_username"></a>
           </div>
           <div class="detail-item company-div">
             <img
@@ -103,7 +103,7 @@
               alt="building icon"
               data-detail-category="company"
             />
-            <p class="detail-text company"></p>
+            <a class="detail-text company"></a>
           </div>
         </div>
       </div>
