--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <h1 class="logo">devfinder</h1>
       <div tabindex="0" class="light-mode-container">
-        <h4 class="light-mode-text">DARK</h4>
+        <p class="light-mode-text">DARK</p>
         <img class="light-mode-image" src="assets/icon-moon.svg" alt="moon" />
       </div>
     </header>
