--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
           </div>
         </div>
       </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Kayla Jones</a>.
+      </div>
     </main>
   </body>
 </html>
